<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="76dp"
        android:layout_width="390dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:background="@android:color/holo_red_dark">

        <TextView
            android:text="@string/controller_name"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="24sp"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="5dp"
            android:layout_width="381dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/controller_connection"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:id="@+id/message"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="7dp"
            android:textSize="18sp"
            android:layout_marginBottom="7dp" />
    </LinearLayout>

    <TextView
        android:text="@string/controller_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:fontFamily="sans-serif" />

</FrameLayout>