<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="212dp"
        android:layout_marginTop="214dp"
        android:background="@android:color/holo_green_dark"
        android:layout_width="190dp"
        android:layout_height="190dp">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton8"
            android:contentDescription="@string/settings_controller"
            android:background="@android:color/transparent"
            android:paddingTop="9dp"
            android:paddingBottom="6dp"
            app:srcCompat="@mipmap/controller" />

        <Button
            android:text="@string/settings_controller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="214dp"
        android:background="@android:color/holo_orange_dark"
        android:layout_width="190dp"
        android:layout_height="190dp">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton7"
            android:background="@android:color/transparent"
            android:paddingTop="9dp"
            android:paddingBottom="6dp"
            android:contentDescription="@string/notifications_button"
            app:srcCompat="@mipmap/visual" />

        <Button
            android:text="@string/settings_visual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="212dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_width="190dp"
        android:layout_height="190dp">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton6"
            android:background="@android:color/transparent"
            android:paddingTop="9dp"
            android:paddingBottom="6dp"
            android:contentDescription="@string/settings_user"
            app:srcCompat="@mipmap/profile" />

        <Button
            android:text="@string/settings_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:layout_width="190dp"
        android:layout_height="190dp">

        <ImageButton
            android:layout_height="wrap_content"
            android:id="@+id/imageButton5"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:paddingTop="9dp"
            android:paddingBottom="6dp"
            android:contentDescription="@string/setting_time"
            app:srcCompat="@mipmap/clock" />

        <Button
            android:text="@string/setting_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:background="@android:color/transparent"
            android:onClick=""/>
    </LinearLayout>
</FrameLayout>