<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/circuit"
            android:id="@+id/imageButton"
            android:background="@android:color/transparent"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="6dp" />

        <Button
            android:text="@string/modules_sensors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginLeft="212dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/block"
            android:id="@+id/imageButton9"
            android:background="@android:color/transparent"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="6dp" />

        <Button
            android:text="@string/modules_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="214dp"
        android:background="@android:color/holo_green_dark">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/lock"
            android:id="@+id/imageButton2"
            android:background="@android:color/transparent"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="6dp" />

        <Button
            android:text="@string/modules_security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginLeft="212dp"
        android:layout_marginTop="214dp"
        android:background="@android:color/holo_orange_dark">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/speaker"
            android:id="@+id/imageButton10"
            android:background="@android:color/transparent"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="6dp" />

        <Button
            android:text="@string/modules_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:background="@android:color/transparent" />
    </LinearLayout>

</FrameLayout>